--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.6.1",
+    "framer-motion": "^12.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
+    "react-rewards": "^2.1.0",
     "sonner": "^2.0.1"
   },
   "devDependencies": {
